<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android TicTacToe</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Androids turn.</string>
    <string name="result_tie">Its a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="new_game">New Game</string>

    <string name="difficulty">Difficulty</string>
    <string name="difficulty_choose">Choose difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>

    <string name="quit">Quit</string>
    <string name="quit_question">Do you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="about">About</string>

    <string name="menu_online">Online match</string>

    <string name="online_title">Online Game</string>
    <string name="online_signing_in">Signing in…</string>
    <string name="online_choose_action">Create or join a game to start</string>
    <string name="online_signin_error">Error signing in</string>
    <string name="online_creating">Creating game…</string>
    <string name="online_searching">Searching game…</string>
    <string name="online_search_error">Search error</string>
    <string name="online_not_found">Game not found or already started</string>

    <!-- Mensajes de estado sencillos, sin placeholders -->
    <string name="online_waiting">Share this code and wait for the other player.</string>
    <string name="online_code_label">Code:</string>
    <string name="online_your_turn">Your turn</string>
    <string name="online_other_turn">Opponent turn</string>
    <string name="online_draw">Draw!</string>
    <string name="online_you_win">You win!</string>
    <string name="online_you_lose">You lose!</string>

    <string name="online_join_hint">Enter code</string>
    <string name="online_create_button">Create game</string>
    <string name="online_join_button">Join</string>


</resources>