<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_game"
        android:title="@string/new_game"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_difficulty"
        android:title="@string/difficulty"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_quit"
        android:title="@string/quit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_online"
        android:title="@string/menu_online"
        app:showAsAction="never" />

</menu>
